fixed bug -- attribution alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,10 +216,9 @@
   }
 
   .attribution {
+    margin-top: 2rem;
+
     font-size: 11px;
-    text-align: center;
-    position: absolute;
-    bottom: 1em;
     text-align: center;
     width: 100%;
 
